--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -131,7 +131,24 @@ ManualIPAddress=
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
++Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Vaultable",Response=ECR_Ignore)),HelpMessage="Enemy Mob")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Vaultable")
++EditProfiles=(Name="NoCollision",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore),(Channel="EngineTraceChannel2",Response=ECR_Ignore),(Channel="EngineTraceChannel3",Response=ECR_Ignore),(Channel="EngineTraceChannel4",Response=ECR_Ignore),(Channel="EngineTraceChannel5",Response=ECR_Ignore),(Channel="EngineTraceChannel6",Response=ECR_Ignore),(Channel="GameTraceChannel2",Response=ECR_Ignore),(Channel="GameTraceChannel3",Response=ECR_Ignore),(Channel="GameTraceChannel4",Response=ECR_Ignore),(Channel="GameTraceChannel5",Response=ECR_Ignore),(Channel="GameTraceChannel6",Response=ECR_Ignore),(Channel="GameTraceChannel7",Response=ECR_Ignore),(Channel="GameTraceChannel8",Response=ECR_Ignore),(Channel="GameTraceChannel9",Response=ECR_Ignore),(Channel="GameTraceChannel10",Response=ECR_Ignore),(Channel="GameTraceChannel11",Response=ECR_Ignore),(Channel="GameTraceChannel12",Response=ECR_Ignore),(Channel="GameTraceChannel13",Response=ECR_Ignore),(Channel="GameTraceChannel14",Response=ECR_Ignore),(Channel="GameTraceChannel15",Response=ECR_Ignore),(Channel="GameTraceChannel16",Response=ECR_Ignore),(Channel="GameTraceChannel17",Response=ECR_Ignore),(Channel="GameTraceChannel18",Response=ECR_Ignore)))
++EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Vaultable")))
++EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Vaultable",Response=ECR_Overlap)))
++EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Vaultable",Response=ECR_Overlap)))
++EditProfiles=(Name="IgnoreOnlyPawn",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="CharacterMesh",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="PhysicsActor",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="Ragdoll",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="Vehicle",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="UI",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="WaterBodyCollision",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)))
++EditProfiles=(Name="OverlapOnlyPawn",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Overlap),(Channel="Vehicle")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
