Investigating states, AI Perception: Sight, Hearing & Damage.

--- a/Saved/Config/ConsoleHistory.ini
+++ b/Saved/Config/ConsoleHistory.ini
@@ -5,5 +5,5 @@ History=Collision.ListChannels
 History=ShowDebug COLLISION
 History=t.MaxFPS 60
 History=StartFPSChart
-History=Stat FPS
+History=stat fps
 
