Rogue enemy type updated. Slings to throw and retreat feature.

--- a/Saved/Config/ConsoleHistory.ini
+++ b/Saved/Config/ConsoleHistory.ini
@@ -2,9 +2,10 @@
 History=ShowFlag.Collision
 History=DebugViewModeHelpers.Enable
 History=Collision.ListChannels
-History=ShowDebug COLLISION
 History=t.MaxFPS 60
 History=StartFPSChart
 History=ShowDebug ANIMATION
+History=ai.debug.EQS.RefreshInterval
+History=ShowDebug COLLISION
 History=Stat FPS
 
