fixed pistol vfx and moving character features to components.

--- a/Saved/Config/ConsoleHistory.ini
+++ b/Saved/Config/ConsoleHistory.ini
@@ -8,4 +8,5 @@ History=ShowDebug ANIMATION
 History=ai.debug.EQS.RefreshInterval
 History=ShowDebug COLLISION
 History=Stat FPS
+History=t.MaxFPS 120
 
