--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,13 +1,13 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMenu_Map.MainMenu_Map
-EditorStartupMap=/Game/Maps/MainMenu_Map.MainMenu_Map
+GameDefaultMap=/Game/Maps/Opening.Opening
+EditorStartupMap=/Game/Maps/Opening.Opening
 GlobalDefaultGameMode=/Game/Blueprints/Maris/BP_MarisGameMode.BP_MarisGameMode_C
 GlobalDefaultServerGameMode=/Game/Blueprints/Maris/BP_MarisGameMode.BP_MarisGameMode_C
 
 [/Script/Engine.RendererSettings]
-r.AllowStaticLighting=False
+r.AllowStaticLighting=True
 
 r.GenerateMeshDistanceFields=True
 
@@ -138,13 +138,13 @@ ManualIPAddress=
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=((Channel="Vaultable",Response=ECR_Ignore)),HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Vaultable",Response=ECR_Ignore)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Vaultable",Response=ECR_Ignore)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
-+Profiles=(Name="Enemy",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Enemy",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Vaultable",Response=ECR_Ignore),(Channel="CharacterTrace")),HelpMessage="Enemy")
++Profiles=(Name="Enemy",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Enemy",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="CharacterTrace")),HelpMessage="Enemy")
 +Profiles=(Name="EnemyMesh",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Enemy",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="CharacterTrace")),HelpMessage="Needs description")
 +Profiles=(Name="Player",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Vaultable",Response=ECR_Ignore),(Channel="Player",Response=ECR_Ignore),(Channel="CharacterTrace")),HelpMessage="Player")
 +Profiles=(Name="PlayerMesh",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore),(Channel="Player",Response=ECR_Ignore),(Channel="CharacterTrace")),HelpMessage="Needs description")
 +Profiles=(Name="Interactable",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap),(Channel="Interactable")),HelpMessage="Interactable things")
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="Vaultable",Response=ECR_Ignore)),HelpMessage="Projectiles")
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Vaultable")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="ToLockOn")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Enemy")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="CharacterTrace")
