gonna get a build
gonna get a build

--- a/ProjectPirate.uproject
+++ b/ProjectPirate.uproject
@@ -50,6 +50,13 @@
 		{
 			"Name": "PreLoadScreenMoviePlayer",
 			"Enabled": true
+		},
+		{
+			"Name": "Fab",
+			"Enabled": false
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
