--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,6 +1,6 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/DeveloperToolSettings.PlatformsMenuSettings]
-PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+StagingDirectory=(Path="C:/Users/berka/Desktop/Unreal Engine/Builds")
 
 [StartupActions]
 bAddPacks=False
