Build ready version

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -65,6 +65,8 @@ bCookMapsOnly=True
 bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=False
 bSkipMovies=False
++UFSMovies=flag_7XP
++UFSMovies=MainMenuBackground_dontDELETE
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
 -IniKeyDenylist=DebugKeyStorePassword
@@ -117,4 +119,9 @@ bSkipMovies=False
 +DirectoriesToNeverCook=(Path="/Game/MetaHumans")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
++StartupMovies=flag_7XP
 
